src/objects/Family_Details__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Family Details</relationshipLabel>
        <relationshipName>Family_Details2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Household_Size_including_client__c</fullName>
        <label>Household Size (including client)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Family Details</relationshipLabel>
        <relationshipName>Family_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Treatment__c</fullName>
        <label>Medical Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Private Doctor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Government Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Household_Expense__c</fullName>
        <label>Monthly Household Expense</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_15_Years__c</fullName>
        <label>Number of Children &lt;15 Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_earning_members__c</fullName>
        <inlineHelpText>Number of earning members (Including client)</inlineHelpText>
        <label>Number of earning members</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Family Details</label>
    <nameField>
        <displayFormat>FDID-{0000000000}</displayFormat>
        <label>Family Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>